appinventor/appengine/src/com/google/appinventor/client/style/classic/variableColors.css
/* ... */
.gallery-app-collection .gallery-card:hover,
.gallery-app-showcase .gallery-card:hover {
  background-color: #EEE;
}

.gallery-card-content .gallery-title {
  color: gray-800;
}
/* more color */
.paragraph-end-block {
  background: linear-gradient(to right,transparent,v-white);
  filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=1,StartColorStr='#00ffffff',EndColorStr='background-color')";
}
.gallery-card-content .gallery-subtitle {
  color: gray-500;
}
.gallery-meta {
  color: gray-500;
}
.section-divider {
  border-bottom: 1px solid #d6d6d6;
}

.gallery-search-textarea {
  color: gray-800;
  background-color: v-white;
}

.gallery-editbox {
  border: 1px dashed gray-300!important;
  background-color: v-white!important;
}
.gallery-editprompt {
  color: gray-800;
}

.gallery-showcase-desc,
.gallery-showcase-title {
  color: #666;
}

.ode-Inbox .ActionButton,
.gallery-app-details .app-action-button,
.gallery-app-details .app-comments-submit,
.ode-UserProfileWrapper .profile-submit {
  color: v-white;
  background-color: gray-500;
}

.gallery-app-details .app-comments-textarea,
.app-desc-textarea {
  color: #bebebe;
}
.app-otherinfo-textdisplay {
  color: gray-800;
}
.app-otherinfo-textlink {
  color: gray-500;
  border-bottom: 1px dotted gray-500;
}
.app-otherinfo-textlink:hover {
  background-color: gray-500;
  color: v-white;
}
.app-otherinfo-textlabel {
  color: gray-500;
}
.app-otherinfo-textbox {
  color: #bebebe;
}

.app-otherinfo-textbox:focus {
  color: #444;
}

.gallery-app-details .app-comments-textarea:focus,
.app-desc-textarea:focus {
  color: #444;
}

.gallery-app-details .app-username {
  color: gray-500;
  border-bottom: 1px dotted gray-500;
}
.gallery-app-details .app-username:hover {
  background-color: gray-500;
  color: v-white;
}
.gallery-app-details .app-attributor-username {
  color: gray-500;
  border-bottom: 1px dotted gray-500;
}

.app-stats {
  color: gray-500;
}

.app-meta .gwt-Label {
  color: gray-500;
}
.app-meta .gwt-Label-auto {
  color: gray-500;
}

.gallery-app-details .app-tags .gwt-Label {
  background-color: #EEE;
  color: gray-500;
}
.gallery-app-details .app-tags .gwt-Label:hover {
  background-color: gray-500;
  color: v-white;
}

.comment-meta .comment-date {
  color: gray-500;
}

.gallery-page-single .gwt-TabBar .gwt-TabBarItem-selected,
.gallery-app-single .gwt-TabBar .gwt-TabBarItem-selected {
  color: gray-500;
}
.gallery-nav-return .gwt-Label,
.app-description,
.app-actions .gwt-TabPanelBottom .gwt-Label,
.app-info-container .primary-prompt,
.app-actions .primary-prompt {
  color: #666;
}

.primary-link-small {
  color: gray-500;
  border-bottom: 1px dotted gray-500;
}
.primary-link,
.moderator-link {
  color: gray-500;
  border-bottom: 1px dotted gray-500;
}

.ode-ProjectGalleryLink:hover,
.primary-link:hover,
.primary-link-small:hover,
.moderator-link:hover {
  background-color: gray-500;
  color: v-white;
}

.ode-ModerationTable .primary-link {
  color: v-black;
}

.seemore-link {
  color: #333399;
  border-bottom: 1px dotted clr-primary-600;
}

.seemore-link:hover {
  color: #980000;
}


/* General gallery helper styles */
.message-popup {
  background-color: v-white;
  border: 1px solid gray-300;
}


.ac-renderer {
    font: normal 13px Arial, sans-serif;
    background: v-white;
    border: 1px solid gray-700;
    color: v-black;
}

.ac-row {
    cursor: pointer;
    padding: .4em;
    background: v-white;
}

.ac-active {
    background-color: gray-200;
}

.blocklySvg text {
    fill: gray-600;
}

.warningNav {
    fill: gray-300;
    stroke:gray-600;
    stroke-width:1;
    cursor:pointer;
}

.download-barcode:before {
    background-color: gray-500;
}

/* Evan's code */
svg.blocklySvg,
.blocklyMainBackground,
rect.gridBackground {
  fill: v-white;
}

.blocklyCount {
  fill: v-black;
}

